<resources>
    <string name="app_name">YogaFitnessApp</string>
    <string name="exercises">Exercises</string>
    <string name="settings">Settings</string>
    <string name="calendar">Calendar</string>
    <string name="view_exercises">View Exercises</string>
    <string name="view_exercise">View Exercise</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="start">START</string>
    <string name="_20">20</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="save">Save</string>
    <string name="get_ready">Get Ready</string>
    <string name="_5">5</string>
    <string name="workout_done">Workout Done</string>
</resources>
