<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.androidproject.yogafitnessapp.ListExercisesActivity">

    <TextView
        android:id="@+id/title"
        android:text="@string/exercise_name"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:gravity="center_vertical|center_horizontal"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    
    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/progress_bar"
        android:layout_below="@+id/title"
        android:indeterminate="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mpb_progressStyle="horizontal"
        app:mpb_progressBackgroundTint="@color/pink"
        android:progressTint="@color/indigo"
        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"/>

    <ImageView
        android:id="@+id/image_detail"
        android:src="@drawable/boat_pose"
        android:layout_centerInParent="true"
        android:layout_width="300dp"
        android:layout_height="200dp" />

    <LinearLayout
        android:orientation="vertical"
        android:visibility="invisible"
        android:id="@+id/get_ready_layout"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <TextView
            android:id="@+id/get_ready_text"
            android:text="@string/get_ready"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/countdown_text"
            android:text="@string/_5"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:id="@+id/start_button"
        android:text="@string/start"
        android:textColor="@android:color/white"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:shadowColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/timer"
        android:text=""
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
